@@ -10,7 +10,6 @@
 		<setting useStatementNamespaces="${useStatementNamespaces}"/>
 		<setting cacheModelsEnabled="true"/>
 		<setting validateSqlMap="false"/>
-		<setting validateSqlMapConfig="true"/>
 	</settings>
 	
 	<!-- Optional if resource -->
